Books | Fix mobile alignment of publisher and download button

--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -276,6 +276,10 @@
   }
 
   .cta-card-desc {
-    font-size: 0.9rem;
+    font-size: 0.95rem;
+  }
+
+  .card-text {
+    font-size: 0.95rem;
   }
 }
